--- a/package.json
+++ b/package.json
@@ -3,12 +3,51 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@boldreports/global": "^6.1.35",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.11",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@grapecity/activereports": "^4.2.2",
+    "@lupus-ai/mui-currency-textfield": "^1.0.3",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.11",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.17",
+    "@mui/system": "^5.15.13",
+    "@mui/x-charts": "^7.3.1",
+    "@mui/x-data-grid": "^6.19.11",
+    "@react-pdf/renderer": "^3.4.4",
+    "@reduxjs/toolkit": "^2.2.4",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
+    "create-react-class": "^15.7.0",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
+    "dhtmlx-scheduler": "^7.0.3",
+    "dom-to-image": "^2.6.0",
+    "google-libphonenumber": "^3.2.34",
+    "html2canvas": "^1.4.1",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-international-phone": "^4.2.7",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
+    "recharts": "^2.12.6",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
