--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "google-libphonenumber": "^3.2.34",
     "html2canvas": "^1.4.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.453.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
