--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "reactstrap": "^9.2.2",
     "recharts": "^2.12.6",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object":"~7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
